--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuefire": "^2.2.0-alpha.0",
+    "vuejs-dialog": "^1.4.1",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
